chore: deploy config update

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -75,7 +75,7 @@ jobs:
           scp -P ${{ secrets.SSH_PORT }} \
               -o StrictHostKeyChecking=no \
               .env \
-              ${{ secrets.SSH_USERNAME }}@${{ secrets.SSH_HOST }}:~/larabrix.rhtech.dev/.env
+              ${{ secrets.SSH_USERNAME }}@${{ secrets.SSH_HOST }}:~/larabrix-shop.rhtech.dev/.env
 
       - name: 🚀 Final Laravel Setup
         run: |
